generate xlsx file with the contest results and mailing of login information

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(GetGradeFormula)
 export(GetOrCreateCellStyle)
 export(GetStatFormula)
 export(Idx2Ref)
+export(SendMailPC2Account)
 export(SetCellStyle)
 export(SetStatFormula)
