--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,5 @@ License: MIT + file LICENSE
 LazyData: true
 Suggests: testthat
 Imports: XLConnect
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
+Encoding: UTF-8
